# workshop-docker

workshop_docker_pt1/: Dockerfile  app.py  pyproject.toml
workshop_docker_pt2/: docker-compose.yaml
